--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html dir="rtl">
+<html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>web-vue-v3</title>
+    <link rel="icon" href="/src/assets/icons/baseline-home-24px.svg">
+    <title>NEWS</title>
   </head>
   <body>
     <div id="app"></div>
